@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-03T02:16:09Z",
+  "timestamp" : "2022-07-03T08:24:49Z",
   "count_outdated" : 647,
   "uniques_outdated" : 335,
-  "count" : 676,
-  "uniques" : 351,
+  "count" : 677,
+  "uniques" : 352,
   "clones" : [
     {
       "timestamp": "2022-06-19T00:00:00Z",
@@ -86,6 +86,13 @@
       "timestamp": "2022-07-02T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
